# inception-reporting-dashboard

./: .dockerignore  .gitignore  CONTRIBUTORS.txt  Dockerfile  NOTICE.txt  README.md  pyproject.toml
.githooks/: pre-commit
.github/ISSUE_TEMPLATE/: bug_report.md  release.md
.github/workflows/: docker_image.yml  python_ci.yml  release_script.yml
inception_reports/: __init__.py  __main__.py  charts.py  cli.py  dashboard_version.py  generate.py  generate_reports_lead.py  generate_reports_manager.py  manager_charts.py  manager_ui.py  models.py  project_loader.py  reporting.py  storage.py
inception_reports/config/: logging_config.yaml
inception_reports/data/: document_types.json  excluded_types.json  specialties.json
scripts/: sync_version.py
tests/: test_charts.py  test_cli.py  test_generate.py  test_generate_reports_lead.py  test_generate_reports_manager.py  test_manager_charts.py  test_project_loader.py  test_reporting.py  test_storage.py
