[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "inception_reports"
description = "Generate plots that report the progress of an INCEpTION project."
version = "0.4.1"
authors = [
    { name = "Serwar", email = "serwar.basch@tu-darmstadt.de" }
]
readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "streamlit",
    "pandas",
    "plotly",
    "numpy",
    "dkpro-cassis",
    "pycaprio",
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["inception_reports"]

[tool.setuptools.package-data]
"inception_reports" = ["data/*.json"]

[project.scripts]
inception_reports = "inception_reports.__main__:main"

[project.urls]
Homepage = "https://github.com/inception-project/inception-reporting-dashboard"
